--- a/templates/main.tmpl
+++ b/templates/main.tmpl
@@ -14,7 +14,7 @@
     {% ifdef AUTHOR_GRAVATAR %}
     <aside class="logo">
       <a href="{{ BASE_URL }}{% block listing_once %}/about/{% endblock %}{% block entry %}/{% endblock %}">
-        <img src="http://www.gravatar.com/avatar/{{ AUTHOR_GRAVATAR }}.png?s=80" class="gravatar">
+        <img src="//www.gravatar.com/avatar/{{ AUTHOR_GRAVATAR }}.png?s=80" class="gravatar">
       </a>
       <span class="logo-prompt">{% block listing_once %}About the Author{% endblock %}{% block entry %}Back to Home{% endblock %}</span>
     </aside>
